[package]
name = "ml-downloader"
version = "0.1.1"
license = "MIT"
description = "Simple blocking downloader based on reqwest"
repository = "https://github.com/malaire/ml-downloader"
keywords = [ "client", "download", "http", "https", "request" ]
categories = [ "web-programming::http-client" ]
edition = "2021"

include = [
    "/src",
    "LICENSE",
    "README.md",
    "build.rs",
]

[dependencies]
bytes = "1.6.0"
digest = "0.10.7"
fastrand = "2.0.2"
hex = "0.4.3"
reqwest = { version = "0.11.27", features = [ "blocking", "native-tls-vendored" ] }

[dev-dependencies]
# used in `RequestBuilder::hash` example
sha2 = "0.10.8"

[build-dependencies]
readme-rustdocifier = "0.1.1"
